--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
+      run: cargo build --features mysql --verbose
+    - name: Run tests with no features
       run: cargo test --verbose
+    - name: Run tests with mysql features
+      run: cargo test --features mysql --verbose
+    - name: Run sqlx tests with sqlite features
+      run: cargo test sqlx --features sqlite --verbose
