--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --features mysql --verbose
-    - name: Run tests with no features
-      run: cargo test --verbose
     - name: Run tests with mysql features
-      run: cargo test --features mysql --verbose
+      run: cargo test -p arel --features mysql --verbose
     - name: Run sqlx tests with sqlite features
-      run: cargo test sqlx --features sqlite --verbose
+      run: cargo test -p arel --features sqlite --verbose
