--- a/arel/Cargo.toml
+++ b/arel/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "arel"
-version = "0.0.8"
+version = "0.0.9"
 edition = "2021"
 description = "arel: a sql orm"
 license = "MIT OR Apache-2.0"
 #include = ["src/**/*.rs", "README.md"]
+readme = "https://github.com/cargo-crates/arel/blob/main/README.md"
 repository = "https://github.com/cargo-crates/arel"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
@@ -27,7 +28,7 @@ chrono = "0.4"
 tokio = { version = "1.1", features = ["full"], optional = true }
 
 arel_macro = { path = "../arel_macro" }
-#arel_macro = "0.0.3"
+#arel_macro = "0.0.4"
 
 [dev-dependencies]
 tokio-test = "0.4.2"
