--- a/arel/Cargo.toml
+++ b/arel/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arel"
-version = "0.0.10"
+version = "0.0.11"
 edition = "2021"
 description = "arel: a sql orm"
 license = "MIT OR Apache-2.0"
@@ -16,15 +16,16 @@ mssql = ["sqlx/mssql"]
 
 [dependencies]
 Inflector = "^0.11.4"
+serde = "1.0"
 serde_json = "1.0.64"
 regex = "1.5.4"
 anyhow = "1.0"
 
 once_cell = "1.8.0"
-sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "any" ] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "any", "chrono" ] }
 async-trait = "0.1.51"
 #Date and Time for Rust
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 #tokio = { version = "1.1", features = ["full"], optional = true }
 
 arel_macro = { path = "../arel_macro" }
