--- a/example_sqlite/Cargo.toml
+++ b/example_sqlite/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[features]
-
 [dependencies]
 log = "0.4"
 pretty_env_logger = "0.4"
 
 tokio = { version = "1.1", features = ["full"] }
-arel = { path = "../arel",  features = ["sqlite"]}
+#arel = { path = "../arel", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
+arel = { path = "../arel", features = ["sqlite"] }
